@@ -1,3 +1,14 @@
+2009-05-29  Dominique Dumont  <dominique.dumont@hp.com> v0.107 (unreleased)
+
+	* lib/Config/Model/Backend/Augeas.pm (all): Use Log::Log4perl for
+	trace with Data::Read and Data::Write categories
+
+2009-05-28  Dominique Dumont  <dominique.dumont@hp.com> 
+
+	* lib/Config/Model/Backend/Augeas.pm: replaced obsolete
+	config_file parameter with file (Config::Model 0.636)
+	(all): ignore Augeas #comment nodes
+
 2009-03-31  Dominique Dumont  <dominique.dumont@hp.com> v0.106
 
 	* t/*.t: fixed tests that broke with Config::Model 0.634
